# hyperion

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  NOTICE.txt  README.md  mypy.ini  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: workflow.yaml
docs/: index.md  to-do.md
docs/architecture/: backend-abstraction.md  context-switching.md  element-resolution.md  execution-model.md  locator-resolution.md  overview.md  page-object-lifecycle.md  waits-and-retries.md
docs/core-concepts/: context-switching.md  element-vs-elements.md  locator-resolution.md  pages-and-widgets.md  pom.md  retry-and-recovery.md
docs/getting-started/: configuration.md  installation.md  project-setup-pytest.md  quickstart-api.md  quickstart-cli.md  quickstart-visual.md  quickstart-web.md
docs/how-to/: api-testing-rest-client.md  carousel.md  cli-testing-cli-client.md  dropdown.md  eql-recipes.md  handle-animations.md  handle-waits-and-timeouts.md  logging-and-reports.md  nested-widgets.md  os-specific-locators.md  platform-agnostic-locators.md  radiogroup.md  responsive-locators.md  ssh-testing-ssh-client.md  table.md  tabs.md  visual-testing-baselines.md  work-with-iframes.md  work-with-webviews.md  write-stable-tests.md
docs/tutorials/: expect-vs-verify.md  first-web-test.md  iframes-and-context.md  page-objects-101.md  widgets-101.md
src/hyperiontf/: __init__.py  exception.py  typing.py
tests/: basic_elements_search_test.py  demo_test.py  iframes_test.py  install_web_dependencies.sh  pytest.ini  responsive_test.py  rest_client_test.py  stale_recovery_test.py  window_activation_test.py
tests/common/: cli_client_test.py  color_unit_test.py  eql_parser_unit_test.py  expect_unit_test.py  image_comparison_test.py  rest_client_test.py  ssh_client_test.py
tests/misc/: simple_http_server.py
tests/page_objects/: action_builder_page.py  basic_elements_page.py  basic_elements_page_with_controls.py  buttons_page.py  (+11 more)
(+294 files in other folders)
