[tool.poetry]
name = "hyperiontf"
version = "0.6.16"
description = "Hyperion Testing Framework"
authors = ["Oleksiy Bondar <bondaroleksiyandriyovich@gmail.com>"]
license = "Apache 2.0 License"
readme = "README.md"

[tool.poetry.dependencies]
requests="^2.31.0"
python = "^3.11"
jsonschema = "^4.23.0"
selenium = "^4.24.0"
Appium-Python-Client = "^3.2.0"
playwright = "^1.46.0"
webdriver_manager="^4.0.2"
ply="^3.11"
opencv-python="^4.9.0.80"
opencv-python-headless="^4.9.0.80"
opencv-contrib-python="^4.9.0.80"
ptyprocess="^0.7.0"
paramiko="^3.5.0"
lxml="^5.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
