[tool.poetry]
name = "hyperiontf"
version = "0.6.22"
description = "Hyperion Testing Framework"
authors = ["Oleksiy Bondar <bondaroleksiyandriyovich@gmail.com>"]
license = "Apache 2.0 License"
readme = "README.md"

[tool.poetry.dependencies]
requests="^2.32.5"
python = "^3.11"
jsonschema = "^4.25.1"
selenium = "^4.39.0"
Appium-Python-Client = "^5.2.3"
playwright = "^1.46.0"
webdriver_manager="^4.0.2"
ply="^3.11"
opencv-python="^4.12.0.88"
opencv-python-headless="^4.12.0.88"
opencv-contrib-python="^4.12.0.88"
ptyprocess="^0.7.0"
paramiko="^4.0.0"
lxml="^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
